Commented out everything above project

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <h1>Tianyu Lu</h1>
+            <h2>Aspiring Computational Biologist</h2>
+            <a href="#" class="btn-rounded-white">Projects</a>
         </div>
         <!-- End #lead-content -->
 
@@ -64,7 +64,7 @@
         <!-- End #lead-down -->
     </div>
     <!-- End #lead -->
-
+    <!--
     <div id="about">
         <div class="container">
             <div class="row">
@@ -80,9 +80,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End #about -->
-
+<!--
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
@@ -110,9 +110,9 @@
                 </p>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End #experience -->
-
+<!--
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
@@ -122,9 +122,9 @@
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
             </p>
-        </div>
+        </div> -->
         <!-- End .education-block -->
-
+<!--
         <div class="education-block">
             <h3>University of Ottawa</h3>
             <span class="education-date">Sept 2016 - Sept 2017</span>
@@ -140,9 +140,9 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 </li>
             </ul>
-        </div>
+        </div>-->
         <!-- End .education-block -->
-    </div>
+  <!--  </div> -->
     <!-- End #education -->
 
     <div id="projects" class="background-alt">
