--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/petase.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>iGEM Toronto Protein Optimization</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Our attempt at a machine learning guided engineering of PETase, a plastic degradation enzyme. Includes application of transfer learning to learn sequence to function mappings and adaptation of Brookes et al.'s adaptive design method.
                         </p>
                         <a href="#">View Project</a>
                     </div>
