Added rna seq project

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <!--  </div> -->
     <!-- End #education -->
 
-    <div id="projects" class="background-alt">
+    <div id="projects" class="background">
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
@@ -167,13 +167,13 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/rnaseq.PNG" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>RNA Sequencing</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Analysis of exploratory data into the role of PAX2 in kidney cell proliferation and apoptosis. Implementation of RNA-Seq pipeline from raw sequences to the identification of differentially expressed genes and their biological pathways.
                         </p>
                         <a href="#">View Project</a>
                     </div>
