--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Tianyu Lu</h1>
-            <h2>Aspiring Computational Biologist</h2>
+            <h2>Computational Biology Student</h2>
             <a href="#" class="btn-rounded-white">Projects</a>
         </div>
         <!-- End #lead-content -->
@@ -64,7 +64,7 @@
         <!-- End #lead-down -->
     </div>
     <!-- End #lead -->
-    <!--
+    
     <div id="about">
         <div class="container">
             <div class="row">
@@ -73,14 +73,12 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        
                     </p>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div> 
     <!-- End #about -->
 <!--
     <div id="experience" class="background-alt">
