--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="shortcut icon" href="crossroad_kTq_icon.ico" type="image/x-icon">
 	<link rel="icon" href="crossroad_kTq_icon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
@@ -26,9 +27,6 @@
         <ul id="menu" class="shadow">
             <li>
                 <a href="#about">About</a>
-            </li>
-            <li>
-                <a href="#experience">Experience</a>
             </li>
             <li>
                 <a href="#education">Education</a>
