formatted about me

--- a/index.html
+++ b/index.html
@@ -70,11 +70,9 @@
                 <!-- <div class="col-md-4">
                     
                 </div> -->
-                <div class="col-md-8">
-                    <p>
-                        Hi there! I'm a Bioinformatics and Computational Biology student at the University of Toronto, interested in all awesome combinations of mathematics and algorithms to biology. Some realizations of this dream are synthetic biology and systems biology, both fascinating subjects. Feel free to contact me to chat about the exciting research in these fields!
-                    </p>
-                </div>
+                <p>
+                    Hi there! I'm a Bioinformatics and Computational Biology student at the University of Toronto, interested in all awesome combinations of mathematics and algorithms to biology. Some realizations of this dream are synthetic biology and systems biology, both fascinating subjects. Feel free to contact me to chat about the exciting research in these fields!
+                </p>
             </div>
         </div>
     </div> 
@@ -156,7 +154,7 @@
                         <p>
                             Our attempt at a machine learning guided engineering of PETase, a plastic degradation enzyme. Includes application of transfer learning to learn sequence to function mappings and adaptation of Brookes et al.'s adaptive design method.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="projects/petase.html">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -171,6 +169,22 @@
                         <h3>RNA Sequencing</h3>
                         <p>
                             Analysis of exploratory data into the role of PAX2 in kidney cell proliferation and apoptosis. Implementation of RNA-Seq pipeline from raw sequences to the identification of differentially expressed genes and their biological pathways.
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/petase.PNG" height=""/>
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>iGEM Toronto Protein Optimization</h3>
+                        <p>
+                            Our attempt at a machine learning guided engineering of PETase, a plastic degradation enzyme. Includes application of transfer learning to learn sequence to function mappings and adaptation of Brookes et al.'s adaptive design method.
                         </p>
                         <a href="#">View Project</a>
                     </div>
