--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <h2 class="heading">About Me</h2>
         <div class="container">
             <div class="row">
-                <!-- <div class="col-md-4">
-                    
-                </div> -->
+                <div class="col-md-4">
+                    <img src="images/profile.jpg">
+                </div>
                 <p>
                     Hi there! I'm a Bioinformatics and Computational Biology student at the University of Toronto, interested in all awesome combinations of mathematics and algorithms to biology. Some realizations of this dream are synthetic biology and systems biology, both fascinating subjects. Feel free to contact me to chat about the exciting research in these fields!
                 </p>
