--- a/projects/petase.html
+++ b/projects/petase.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tianyu Lu</title>
-	<link rel="shortcut icon" href="crossroad_kTq_icon.ico" type="image/x-icon">
-	<link rel="icon" href="crossroad_kTq_icon.ico" type="image/x-icon">
+    <title>iGEM Project</title>
+	<link rel="shortcut icon" href="../crossroad_kTq_icon.ico" type="../image/x-icon">
+	<link rel="icon" href="../crossroad_kTq_icon.ico" type="../image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="../libs/font-awesome/css/font-awesome.min.css">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -48,12 +48,14 @@
                 <div class="col-md-8">
                     <p>
                         I custom tailored the conditioning algorithm by <a href="https://arxiv.org/abs/1901.10060">Brookes et al.</a> for PETase protein function optimization. To mitigate the lack of PETase kinetics data, I applied transfer learning to the oracle predictive function. The larger dataset for the first step of transfer learning was curated from <a href="http://sabiork.h-its.org/sabioRestWebServices">SABIO-RK</a> kinetics database.
+                    </p>
+                    <p>
                         <a href="https://github.com/MauriceR71/CbAS">GitHub link for full implementation</a>.
                     </p>
                     <p>
-                        Also check out the slides I presented for the general team:
+                        Check out the slides I presented for the general team:
                     </p>
-                    <iframe src="https://onedrive.live.com/embed?cid=9968677B3CC3073A&amp;resid=9968677B3CC3073A%2176143&amp;authkey=AILJJx1vWsgwUQE&amp;em=2&amp;wdAr=1.7777777777777777&amp;wdEaa=1" width="1186px" height="691px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+                    <iframe src="https://onedrive.live.com/embed?cid=9968677B3CC3073A&amp;resid=9968677B3CC3073A%2176143&amp;authkey=AILJJx1vWsgwUQE&amp;em=2&amp;wdAr=1.7777777777777777&amp;wdEaa=1" width="720px" height="405px" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
