--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="#about">About</a>
             </li>
             <li>
-                <a href="#education">Education</a>
+                <a href="#education">Resume</a>
             </li>
             <li>
                 <a href="#projects">Projects</a>
@@ -68,10 +68,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="images/profile.jpg">
+                    <img src="images/profile.jpg" width="400" height="533">
                 </div>
                 <p>
-                    Hi there! I'm a Bioinformatics and Computational Biology student at the University of Toronto, interested in all awesome combinations of mathematics and algorithms to biology. Some realizations of this dream are synthetic biology and systems biology, both fascinating subjects. Feel free to contact me to chat about the exciting research in these fields!
+                    Hi there! I'm a Bioinformatics and Computational Biology student at the University of Toronto, interested in the intersections of mathematics and algorithms to biology. Instances of this idea are realized in synthetic biology and systems biology, both fascinating subjects.
                 </p>
             </div>
         </div>
