--- a/index.html
+++ b/index.html
@@ -68,11 +68,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="images/profile.jpg" width="400" height="533">
+                    <img src="images/profile.jpg" width="280" height="373">
                 </div>
-                <p>
-                    Hi there! I'm a Bioinformatics and Computational Biology student at the University of Toronto, interested in the intersections of mathematics and algorithms to biology. Instances of this idea are realized in synthetic biology and systems biology, both fascinating subjects.
-                </p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <p>
+                        Hi there! I'm a Bioinformatics and Computational Biology student at the University of Toronto, interested in the intersections of mathematics and algorithms to biology. Instances of this idea are realized in synthetic biology and systems biology, both fascinating subjects.
+                    </p>
+                </div>
             </div>
         </div>
     </div> 
