formatted about section padding

--- a/index.html
+++ b/index.html
@@ -65,18 +65,13 @@
     
     <div id="about">
         <h2 class="heading">About Me</h2>
-        <div class="container">
-            <div class="row">
-                <img src="images/profile.jpg" width="280" height="373">
+            <img class="img-profile" src="images/profile.jpg" width="280" height="373">
+            <div class="wrapper">
+                <article class="about-info">
+                    <p> Hi there! I'm a Bioinformatics and Computational Biology student at the University of Toronto, interested in the intersection of mathematics and algorithms with biology. Instances of this idea are realized in the fascinating fields of synthetic biology and systems biology.
+                    </p>
+                </article>
             </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <p>
-                    Hi there! I'm a Bioinformatics and Computational Biology student at the University of Toronto, interested in the intersections of mathematics and algorithms to biology. Instances of this idea are realized in synthetic biology and systems biology, both fascinating subjects.
-                </p>
-            </div>
-        </div>
     </div> 
     <!-- End #about -->
 <!--
