formatted petase.html

--- a/projects/petase.html
+++ b/projects/petase.html
@@ -16,11 +16,11 @@
 </head>
 
 <body>
-    <div id="mobile-menu-open" class="shadow-large">
+    <!-- <div id="mobile-menu-open" class="shadow-large">
         <i class="fa fa-bars" aria-hidden="true"></i>
-    </div>
+    </div> -->
     <!-- End #mobile-menu-toggle -->
-    <header>
+    <!-- <header>
         <div id="mobile-menu-close">
             <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
@@ -29,36 +29,30 @@
                 <a href="../index.html">Home</a>
             </li>
         </ul>
-    </header>
+    </header> -->
     <!-- End header -->
 
-    <div id="intro">
+    <div id="about">
         <h2 class="heading">Highlights</h2>
-        <ol>
-            <li>Generated sequence 18 times the catalytic rate of the wildtype</li>
-            <li>Curated sequence to kinetics function dataset for hydrolases</li>
-            <li>Applied novel transfer learning method to PETase engineering</li>
-        </ol>
+        <p>Generated sequence 18 times the catalytic rate of the wildtype</p>
+        <p>Curated sequence to kinetics function dataset for hydrolases</p>
+        <p>Applied novel transfer learning method to PETase engineering</p>
     </div>
 
     <div id="about">
         <h2 class="heading">Details</h2>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8">
-                    <p>
-                        I custom tailored the conditioning algorithm by <a href="https://arxiv.org/abs/1901.10060">Brookes et al.</a> for PETase protein function optimization. To mitigate the lack of PETase kinetics data, I applied transfer learning to the oracle predictive function. The larger dataset for the first step of transfer learning was curated from <a href="http://sabiork.h-its.org/sabioRestWebServices">SABIO-RK</a> kinetics database.
-                    </p>
-                    <p>
-                        <a href="https://github.com/MauriceR71/CbAS">GitHub link for full implementation</a>.
-                    </p>
-                    <p>
-                        Check out the slides I presented for the general team:
-                    </p>
-                    <iframe src="https://onedrive.live.com/embed?cid=9968677B3CC3073A&amp;resid=9968677B3CC3073A%2176143&amp;authkey=AILJJx1vWsgwUQE&amp;em=2&amp;wdAr=1.7777777777777777&amp;wdEaa=1" width="720px" height="405px" frameborder="0"></iframe>
-                </div>
-            </div>
+        <div class="highlights">
+            <p>
+                I custom tailored the conditioning algorithm by <a href="https://arxiv.org/abs/1901.10060">Brookes et al.</a> for PETase protein function optimization. To mitigate the lack of PETase kinetics data, I applied transfer learning to the oracle predictive function. The larger dataset for the first step of transfer learning was curated from <a href="http://sabiork.h-its.org/sabioRestWebServices">SABIO-RK</a> kinetics database.
+            </p>
+            <p>
+                <a href="https://github.com/MauriceR71/CbAS">GitHub link for full implementation</a>.
+            </p>
+            <p>
+                Check out the slides I presented for the general team:
+            </p>
         </div>
+            <iframe src="https://onedrive.live.com/embed?cid=9968677B3CC3073A&amp;resid=9968677B3CC3073A%2176143&amp;authkey=AILJJx1vWsgwUQE&amp;em=2&amp;wdAr=1.7777777777777777&amp;wdEaa=1" width="720px" height="405px" frameborder="0"></iframe>
     </div> 
 
     <div id="contact">
