formatted profile picture

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div id="lead-content">
             <h1>Tianyu Lu</h1>
             <h2>Computational Biology Student</h2>
-            <a href="#" class="btn-rounded-white">Projects</a>
+            <!-- <a href="#" class="btn-rounded-white">Projects</a> -->
         </div>
         <!-- End #lead-content -->
 
@@ -65,13 +65,13 @@
     
     <div id="about">
         <h2 class="heading">About Me</h2>
-            <img class="img-profile" src="images/profile.jpg" width="280" height="373">
-            <div class="wrapper">
-                <article class="about-info">
-                    <p> Hi there! I'm a Bioinformatics and Computational Biology student at the University of Toronto, interested in the intersection of mathematics and algorithms with biology. Instances of this idea are realized in the fascinating fields of synthetic biology and systems biology.
-                    </p>
-                </article>
-            </div>
+        <div class="wrapper">
+            <article class="about-info">
+                <img class="img-profile" src="images/profile.jpg" width="280" height="373">
+                <p> Hi there! I'm a Bioinformatics and Computational Biology student at the University of Toronto, interested in the intersection of mathematics and algorithms with biology. Instances of this idea are realized in the fascinating fields of synthetic biology and systems biology.
+                </p>
+            </article>
+        </div>
     </div> 
     <!-- End #about -->
 <!--
@@ -137,7 +137,7 @@
   <!--  </div> -->
     <!-- End #education -->
 
-    <div id="projects" class="background">
+    <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
@@ -238,19 +238,10 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/tianyu-lu" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/MauriceR71" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="tianyu.lu@mail.utoronto.ca"></a>
                         </li>
                     </ul>
                 </div>
