--- a/projects/petase.html
+++ b/projects/petase.html
@@ -16,22 +16,6 @@
 </head>
 
 <body>
-    <!-- <div id="mobile-menu-open" class="shadow-large">
-        <i class="fa fa-bars" aria-hidden="true"></i>
-    </div> -->
-    <!-- End #mobile-menu-toggle -->
-    <!-- <header>
-        <div id="mobile-menu-close">
-            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
-        </div>
-        <ul id="menu" class="shadow">
-            <li>
-                <a href="../index.html">Home</a>
-            </li>
-        </ul>
-    </header> -->
-    <!-- End header -->
-
     <div id="about">
         <h2 class="heading">Highlights</h2>
         <p>Generated sequence 18 times the catalytic rate of the wildtype</p>
@@ -52,7 +36,7 @@
                 Check out the slides I presented for the general team:
             </p>
         </div>
-            <iframe src="https://onedrive.live.com/embed?cid=9968677B3CC3073A&amp;resid=9968677B3CC3073A%2176143&amp;authkey=AILJJx1vWsgwUQE&amp;em=2&amp;wdAr=1.7777777777777777&amp;wdEaa=1" width="720px" height="405px" frameborder="0"></iframe>
+            <iframe src="https://onedrive.live.com/embed?cid=9968677B3CC3073A&amp;resid=9968677B3CC3073A%2176143&amp;authkey=AILJJx1vWsgwUQE&amp;em=2&amp;wdAr=1.7777777777777777&amp;wdEaa=1" width="60%" height="408px" frameborder="0"></iframe>
     </div> 
 
     <div id="contact">
