added contact section

--- a/index.html
+++ b/index.html
@@ -210,14 +210,13 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="tianyu.lu@mail.utoronto.ca">
+            <form method="POST" action="https://formspree.io/tianyu.lu@mail.utoronto.ca">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
                 <button type="submit">Send</button>
             </form>
         </div>
-        <!-- End #contact-form -->
     </div>
     <!-- End #contact -->
 
@@ -225,11 +224,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-5 copyright">
+                    <p>Contact me: <a href="tianyu.lu@mail.utoronto.ca">tianyu.lu@mail.utoronto.ca</a></p>
                     <p>
                         Copyright &copy; 2019 Tianyu Lu
+                        Icons made by <a href="https://www.flaticon.com/authors/stephen-hutchings" title="Stephen Hutchings">Stephen Hutchings</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
                     </p>
                 </div>
-                <div>Icons made by <a href="https://www.flaticon.com/authors/stephen-hutchings" title="Stephen Hutchings">Stephen Hutchings</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
                 <div class="col-sm-2 top">
                     <span id="to-top">
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
@@ -239,9 +239,6 @@
                     <ul>
                         <li>
                             <a href="https://github.com/MauriceR71" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="tianyu.lu@mail.utoronto.ca"></a>
                         </li>
                     </ul>
                 </div>
