added two new projects

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/petase.PNG" height=""/>
+                        <img src="images/petase.PNG"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -167,7 +167,7 @@
                         <p>
                             Analysis of exploratory data into the role of PAX2 in kidney cell proliferation and apoptosis. Implementation of RNA-Seq pipeline from raw sequences to the identification of differentially expressed genes and their biological pathways.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="projects/rnaseq.html">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -175,15 +175,15 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/petase.PNG" height=""/>
+                        <img src="images/carsapp.gif" width="300px" height="300px"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>iGEM Toronto Protein Optimization</h3>
+                        <h3>iOS Development</h3>
                         <p>
-                            Our attempt at a machine learning guided engineering of PETase, a plastic degradation enzyme. Includes application of transfer learning to learn sequence to function mappings and adaptation of Brookes et al.'s adaptive design method.
+                            Created three iPad apps designed for psychology experiments at the University of Toronto. Apps allow for flexible control over experiment parameters and safeguards to prevent data loss. 
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="projects/iosapps.html">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
