--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="#about">About</a>
             </li>
             <li>
-                <a href="#education">Resume</a>
+                <a href="resume/resume.html">Resume</a>
             </li>
             <li>
                 <a href="#projects">Projects</a>
