--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
                 <a href="#about">About</a>
             </li>
             <li>
-                <a href="resume/resume.html">Resume</a>
-            </li>
-            <li>
                 <a href="#projects">Projects</a>
             </li>
             <li>
@@ -48,7 +45,7 @@
         <div id="lead-content">
             <h1>Tianyu Lu</h1>
             <h2>Computational Biology Student</h2>
-            <!-- <a href="#" class="btn-rounded-white">Projects</a> -->
+            <a href="resume/resume.html" class="btn-rounded-white">Resume</a>
         </div>
         <!-- End #lead-content -->
 
