added new section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="#projects">Projects</a>
             </li>
             <li>
-                <a href="#skills">Skills</a>
+                <a href="#articles">Articles</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
@@ -64,8 +64,8 @@
         <h2 class="heading">About Me</h2>
         <div class="wrapper">
             <article class="about-info">
-                <img class="img-profile" src="images/profile.jpg" width="280" height="373">
-                <p> Hi there! I'm a Bioinformatics and Computational Biology student at the University of Toronto, interested in the intersection of mathematics and algorithms with biology. Instances of this idea are realized in the fascinating fields of synthetic biology and systems biology.
+                <img class="img-profile" src="images/profile.jpg" width="186" height="248">
+                <p> Hi there! I'm a Computational Biology and Computer Science undergraduate at the University of Toronto, interested in the intersection of mathematics and algorithms with biology. Check out some of the projects I'm working on in this fascinating interdisciplinary field below.
                 </p>
             </article>
         </div>
@@ -190,19 +190,26 @@
     </div>
     <!-- End #projects -->
 
-    <div id="skills">
-        <h2 class="heading">Skills</h2>
-        <ul>
-            <li>Python</li>
-            <li>Java</li>
-            <li>Swift</li>
-            <li>MATLAB</li>
-            <li>R</li>
-            <li>Bash</li>
-            <li>Linux Terminal</li>
-        </ul>
-    </div>
-    <!-- End #skills -->
+    <!-- <div id="articles">
+        <h2 class="heading">Articles</h2>
+        <div class="container">
+            <div class="row">
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/"/>
+                    </div> -->
+                    <!-- End .project-image -->
+                    <!-- <div class="project-info">
+                        <h3>Genetic Networks in Reinforcement Learning</h3>
+                        <p>
+                            Gene regulation is 
+                        </p>
+                        <a href="articles/genetic-network.html">Read more</a>
+                    </div> -->
+<!--                 </div>
+            </div>
+        </div>
+    </div> -->
 
     <div id="contact">
         <h2>Get in Touch</h2>
