--- a/projects/petase.html
+++ b/projects/petase.html
@@ -9,7 +9,7 @@
 	<link rel="shortcut icon" href="../crossroad_kTq_icon.ico" type="../image/x-icon">
 	<link rel="icon" href="../crossroad_kTq_icon.ico" type="../image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="../libs/font-awesome/css/font-awesome.min.css">
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/styles.css" rel="stylesheet">
@@ -17,10 +17,8 @@
 
 <body>
     <div id="about">
-        <h2 class="heading">Highlights</h2>
-        <p>Generated sequence 18 times the catalytic rate of the wildtype</p>
-        <p>Curated sequence to kinetics function dataset for hydrolases</p>
-        <p>Applied novel transfer learning method to PETase engineering</p>
+        <h2 class="heading">Abstract</h2>
+        <p></p>
     </div>
 
     <div id="about">
