added wiki link

--- a/projects/petase.html
+++ b/projects/petase.html
@@ -25,6 +25,9 @@
         <h2 class="heading">Details</h2>
         <div class="highlights">
             <p>
+                <a href="https://hackmd.io/@tylu/rJVJ-4k8H">See my latest progress documented here.</a>.
+            </p>
+            <p>
                 The pipeline above was inspired by the algorithm by <a href="https://arxiv.org/abs/1901.10060">Brookes et al.</a>. The larger dataset for the first step of transfer learning was curated from <a href="http://sabiork.h-its.org/sabioRestWebServices">SABIO-RK</a> kinetics database.
             </p>
             <p>
