--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h2 class="heading">About Me</h2>
         <div class="wrapper">
             <article class="about-info">
-                <img class="img-profile" src="images/profile.jpg" width="186" height="248">
+                <img class="img-profile" src="images/circle.png" width="224" height="224">
                 <p> Hi there! I'm a Computational Biology and Computer Science undergraduate at the University of Toronto, interested in the intersection of mathematics and algorithms with biology. Check out some of the projects I'm working on in this fascinating interdisciplinary field below.
                 </p>
             </article>
