linked to markdown html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="wrapper">
             <article class="about-info">
                 <img class="img-profile" src="images/circle.png" width="224" height="224">
-                <p> Hi there! I'm a Computational Biology and Computer Science undergraduate at the University of Toronto, interested in the intersection of mathematics and algorithms with biology. Check out some of the projects I'm working on in this fascinating interdisciplinary field below.
+                <p> Hi there! I'm a Computational Biology and Computer Science undergraduate at the University of Toronto, currently working on machine learning guided protein design with <a href="http://www.kimlab.org/">Philip Kim</a> at the <a href="https://ccbr.utoronto.ca/donnelly-centre-cellular-and-biomolecular-research">Donnelly Centre for Cellular and Biomolecular Research</a>. Check out some of the projects I'm working on in this fascinating interdisciplinary field below.
                 </p>
             </article>
         </div>
@@ -148,7 +148,7 @@
                         <p>
                             Our attempt at a machine learning guided engineering of PETase, a plastic degradation enzyme. Includes application of transfer learning to learn sequence to function mappings and adaptation of Brookes et al.'s adaptive design method.
                         </p>
-                        <a href="projects/petase.html">View Project</a>
+                        <a href="projects/poml.html">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
