--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="#projects">Projects</a>
             </li>
             <li>
-                <a href="#articles">Articles</a>
+                <a href="#articles">Blog</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
