--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@ page:
 
 <header class="main-header {% if page.cover %}" style="background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
     {% include head.html %}
-    <link rel="icon" href="http://example.com/favicon.png">
+    
     <nav class="main-nav overlay clearfix">
             {% if page.logo %}
-                <a class="blog-logo" href="{{ site.baseurl }}">
+                <!-- <a class="blog-logo" href="{{ site.baseurl }}">
                     <img src="/assets/images/crossroad.png" alt="Blog Logo" />
-                </a>
+                </a> -->
             {% endif %}
         <a class="subscribe-button icon-feed" href="{{ site.baseurl }}feed.xml">Subscribe</a>
     </nav>
